--- a/style.css
+++ b/style.css
@@ -30,3 +30,30 @@ body {
     font-size: 16px;
     margin-top: 20px;
 }
+
+main {
+    padding: 150px;
+}
+
+.main-banner {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 50px;
+    align-items: center;
+}
+
+.chilled-banner ul {
+    margin-left: -40px;
+}
+
+.chilled-banner ul span {
+    color: green;
+    font-size: 16px;
+}
+
+.chilled-banner ul li {
+    list-style: none;
+    font-size: 13px;
+    color: rgb(53, 51, 51);
+    line-height: 30px;
+}
